--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -4,7 +4,7 @@
     justify-content: flex-start;
     align-items: flex-start;
 
-    background-color: #6f6159;
+    background-color: #092240;
 
     width: 100%;
     height: 30vh;
@@ -61,7 +61,7 @@
         font-weight: 200;
         font-style: normal;
         font-size: 1vw;
-        color: #928882;
+        color: #FFFFFF;
         line-height: 1.5vw;
 
         @media (max-width: 900px) {
@@ -75,7 +75,7 @@
         margin-top: 2vw;
         font-style: normal;
         font-size: 1vw;
-        color: #928882;
+        color: #FFFFFF;
 
         @media (max-width: 900px) {
             padding-bottom: 8vw;
@@ -91,7 +91,7 @@
         text-decoration: none;
         font-size: 1.8vw;
         font-weight: 500;
-        color: #e6ddd7;
+        color: #FFFFFF;
 
         @media (max-width: 900px) {
             margin-top: 5vw;
