--- a/src/components/MobilePopup/MobilePopup.module.scss
+++ b/src/components/MobilePopup/MobilePopup.module.scss
@@ -4,14 +4,14 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    //background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1000;
 
     @media (max-width: 900px) {
-        background-color: rgba(0, 0, 0, 0.3);
+        //background-color: rgba(0, 0, 0, 0.3);
     }
 }
 
