--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -16,8 +16,8 @@
 
 .subPinkImg {
     position: absolute;
-    left: 55vw; /* 화면 오른쪽 끝으로 배치 */
-    top: 1vw; /* 세로 중앙 배치 (필요에 따라 수정 가능) */
+    left: 40vw; /* 화면 오른쪽 끝으로 배치 */
+    top: 1.5vw; /* 세로 중앙 배치 (필요에 따라 수정 가능) */
     width: 8vw; /* 크기 조정 (필요에 따라 변경) */
     z-index: 1; /* 텍스트와 겹치지 않도록 설정 */
     animation: subPinkImgFadeIn 1.5s ease-out forwards 1.5s; /* 서서히 나타나게 */
@@ -46,7 +46,7 @@
 .mainImageTextBox {
     font-weight: 900;
     position: absolute;
-    top: 32%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: #FFFFFF;
@@ -57,7 +57,7 @@
 }
 
 .mainImageTextSub {
-    font-size: 20px; /* 텍스트2와 크기 동일 */
+    font-size: 1vw; /* 텍스트2와 크기 동일 */
     color: #ffffff;
     font-weight: normal;
     margin-bottom: 10px;
@@ -65,7 +65,7 @@
 }
 
 .greyText {
-    font-size: 30px; /* 텍스트2 가장 큰 크기 */
+    font-size: 1.5vw; /* 텍스트2 가장 큰 크기 */
     font-family: 'Paperlogy-8ExtraBold';
     color: #fbf70a; /* 회색 텍스트 */
 }
@@ -78,7 +78,7 @@
 
 .grandOpenText {
     font-family: 'Paperlogy-8ExtraBold';
-    font-size: 2vw;
+    font-size: 1.5vw;
     font-weight: bold;
     color: #890d18; /* 강조 색상 */
     text-align: center;
@@ -98,7 +98,7 @@
 .mainImageText {
     font-family: 'Paperlogy-8ExtraBold';
     font-weight: 400;
-    font-size: 48px; /* 텍스트2 가장 큰 크기 */
+    font-size: 2vw; /* 텍스트2 가장 큰 크기 */
     margin: 1vw 0;
     color: #FFFFFF; /* 파랑 색상 */
 }
