--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -280,8 +280,15 @@
             color: #241400;
 
             a {
-                text-decoration: none;
-                color: inherit;
+                text-decoration: none; /* 밑줄 제거 */
+                color: #000000; /* 검정색으로 변경 */
+
+                font-size: 1vw; /* 글자 크기 키우기 */
+                font-weight: bold; /* 가독성을 위해 굵게 설정 */
+                background: none; /* 버튼 스타일 제거 */
+                border: none; /* 버튼 테두리 제거 */
+                padding: 0; /* 내부 여백 제거 */
+                display: inline; /* 버튼처럼 보이지 않도록 inline 설정 */
             }
         }
     }
@@ -742,8 +749,12 @@
             color: #241400;
 
             a {
-                text-decoration: none;
-                color: inherit;
+                text-decoration: none; /* 밑줄 제거 */
+                color: #000000; /* 검정색으로 변경 */
+                font-size: 4vw; /* 글자 크기 키우기 */
+                font-weight: bold; /* 가독성을 위해 굵게 설정 */
+                padding: 0; /* 내부 여백 제거 */
+                display: inline; /* 버튼처럼 보이지 않도록 inline 설정 */
             }
         }
 
@@ -1366,6 +1377,5 @@
   border-radius: 4px;
   box-sizing: border-box;
 }
-
   
   
