--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -544,9 +544,11 @@
   height: 100%;
 }
 
-//모바일 메인 스타일
+//모바일메인 스타일
 
 .mobileMain {
+  width: 100vw;
+
   .imageContainer {
     position: relative; /* 상대적 위치 지정 */
     width: 100%;
@@ -554,7 +556,7 @@
     overflow: hidden; /* 이미지를 잘라내지 않도록 */
 
     .mainImage {
-      width: 100vw;
+      width: 100%;
       height: 70vh;
       object-fit: cover; /* 이미지 비율 유지하면서 가득 채우기 */
       filter: brightness(0.8) contrast(1.2); /* 이미지에 어두운 필터 적용, 대비 강조 */
@@ -695,9 +697,8 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    height: 75vw;
-
-    padding: 10vw 0 0 7vw;
+    width: 100vw;
+    padding: 10vw 0 0 0;
 
     font-family: "HakgyoansimBareonbatangB";
     font-weight: 700;
@@ -741,7 +742,7 @@
   }
 
   .container2 {
-    width: 100%;
+    width: 100vw;
     height: 100%;
 
     img {
@@ -772,13 +773,14 @@
 
   .container3 {
     position: relative;
-    padding-top: 12vw;
-    padding-left: 5.5vw;
 
+    width: 100%;
     height: 80vw;
     background: linear-gradient(to bottom, #fff6ea 85%, #c4825f 15%);
 
     .textbox {
+      padding: 5vw 0 0 5vw;
+
       font-weight: 700;
       font-size: 3.5vw;
 
@@ -934,22 +936,21 @@
 }
 
 .container7 {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  width: 100%;
-
-  background-color: #fff8ee;
-
-  .textBox {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: flex-start;
-
-    margin: 4vw 0 0 2.5vw;
     width: 100%;
+
+    background-color: #fff8ee;
+
+    .textBox {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+
+        margin: 4vw 0 0 2.5vw;
 
     .title {
       color: #890d18;
@@ -1205,7 +1206,6 @@
   border-radius: 4px;
   box-sizing: border-box;
 }
-
 
 /* 좌우 2단 레이아웃 컨테이너 */
 .registrationContainer {
