--- a/src/components/InterestPopup/InterestPopup.module.scss
+++ b/src/components/InterestPopup/InterestPopup.module.scss
@@ -1,11 +1,10 @@
 /* InterestPopup.module.scss */
 .popupOverlay {
   position: fixed;
-  top: 5vw;
+  top: 1vw;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,8 +13,8 @@
 
 .popupContainer {
   background: #fff;
-  width: 80%;
-  max-width: 600px;
+  width: 60%;
+  max-width: 30%;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
@@ -26,12 +25,12 @@
 
 .closeBtn {
   position: absolute;
-  top: 0.5vw;
-  right: 1.5vw;
+  top: 10px;
+  right: 10px;
   background: transparent;
   border: none;
-  font-size: 8vw;
-  color: #FFFFFF;
+  font-size: 1.8rem;
+  color: #333;
   cursor: pointer;
   z-index: 2;
 }
@@ -48,8 +47,8 @@
 }
 
 .formContainer {
-  width: 94%;
-  padding: 20px;
+  width: 95%;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -72,7 +71,7 @@
   .formGroup {
     display: flex;
     flex-direction: column;
-    margin-bottom: 15px;
+    margin-bottom: 1.5vw;
     align-items: center;  // 수평 중앙 정렬
     width: 100%;
     justify-content: center;
@@ -90,7 +89,7 @@
 
     input {
       padding: 12px;
-      font-size: 13px;
+      font-size: 16px;
       border: 1px solid #ddd;
       border-radius: 4px;
       transition: border-color 0.3s;
@@ -108,20 +107,55 @@
   }
 
   .submitBtn {
-    padding: 15px 6vw;
-    font-size: 0.9vw;
+    width: 70%;
+    padding: 0.5vw;
+    font-size: 1vw;
+    font-family: 'GongGothicMedium';
     background-color: #890d18;
     color: #fff;
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     cursor: pointer;
     transition: background-color 0.3s;
-
+    
     &:hover {
       background-color: #890d18;
     }
   }
 }
+
+/* 모바일 전용 미디어 쿼리 */
+@media screen and (max-width: 768px) {
+  .popupContainer {
+    width: 90%;
+    max-width: 90%;
+  }
+  .headerImage {
+    height: 50%; // 모바일 환경에 맞게 이미지 높이 조정
+  }
+  .formContainer {
+    h2 {
+      font-size: 1.8rem;
+    }
+    .formGroup {
+      margin-bottom: 1rem;
+      label {
+        font-size: 1.2rem;
+      }
+      input {
+        width: 80%;
+        font-size: 1rem;
+        padding: 10px;
+      }
+    }
+    .submitBtn {
+      width: 80%;
+      font-size: 1rem;
+      padding: 0.8rem;
+    }
+  }
+}
+
 
 .successMessage {
   font-size: 0.9vw; /* PC 버전에서의 기본 폰트 크기 */
