feat : 헤더전화버튼수정

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -180,13 +180,13 @@
   height: 3vw;
   background-color: #ffffff;
   border-bottom: 1px solid #890d18;
-  z-index: 1000;
+  z-index: 1001;
   text-decoration: none;
 
   .logo {
     margin-top: -0.5vw;
     width: 18vw;
-  }
+  }x
   .icon {
     margin: 20vw 3.5vw;
   }
