feat : 모바일멘트수정

--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -178,7 +178,7 @@
 
   .grandOpenText1 {
     font-size: 4vw;
-    font-family: 'Paperlogy-8ExtraBold';
+    font-family: 'Gyeonggi_Title_Medium';
     color: #890d18; /* 강조 색상 */
     text-align: center;
     margin-top: 4vw;
@@ -550,7 +550,7 @@
   .imageContainer {
     position: relative; /* 상대적 위치 지정 */
     width: 100%;
-    height: 90%;
+    height: 70vh;
     overflow: hidden; /* 이미지를 잘라내지 않도록 */
 
     .mainImage {
