--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -75,12 +75,12 @@
 }
 
 .grandOpenText {
-  font-family: "Paperlogy-8ExtraBold";
-  font-size: 1.5vw;
+  font-family: 'Gyeonggi_Title_Medium';
+  font-size: 2vw;
   font-weight: bold;
   color: #890d18; /* 강조 색상 */
   text-align: center;
-  margin-top: 10px;
+  margin-top: 2vw;
 }
 
 .mainImageTitleBox {
