--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -75,7 +75,7 @@
   }
   
   .reserveBtn {
-    background-color: #207575;
+    background-color: #890d18;
     color: #fff;
     padding: 12px;
     border: none;
@@ -85,7 +85,7 @@
     transition: 0.3s;
   
     &:hover {
-      background-color: #207575;
+      background-color: #890d18;
     }
   }
   
@@ -213,7 +213,7 @@
   
       .reserveBtn {
         border: 1px solid #fff;
-        background-color: #207575;
+        background-color: #890d18;
         color: #fff;
         padding: 10px 50px;
         border: none;
@@ -223,7 +223,7 @@
         transition: 0.3s;
   
         &:hover {
-          background-color: #207575;
+          background-color: #890d18;
         }
       }
   
