--- a/src/pages/LocationEnvironment/LocationEnvironment.module.scss
+++ b/src/pages/LocationEnvironment/LocationEnvironment.module.scss
@@ -102,10 +102,12 @@
     justify-content: center;
     align-items: center;
     gap: 2vw;
+    margin-bottom: 3vw;
 
     width: 80%;
 
     @media (max-width: 900px) {
+        margin-bottom: 3vw;
         width: 90%;
         grid-template-columns: repeat(1, 1fr);
     }
