--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -135,8 +135,9 @@
 /* 모바일 화면을 위한 CSS */
 @media (max-width: 900px) {
   .mainImageTextBox1 {
+    font-family: 'Pretendard-Regular';
     position: absolute;
-    top: 25%; /* 모바일에서 더 상단에 위치 */
+    top: 20%; /* 모바일에서 더 상단에 위치 */
     left: 50%;
     transform: translateX(-50%); /* 중앙 정렬 */
     color: #ffffff;
@@ -148,17 +149,18 @@
 
   .mainImageTextSub1 {
     color: #ffffff; /* 회색 */
-    font-size: 3vw; /* 모바일에서 글자 크기 줄임 */
-    line-height: 1.4;
+    font-size: 3.5vw; /* 모바일에서 글자 크기 줄임 */
+    font-weight: 400;
+    line-height: 1.6;
     margin-bottom: 2vw; /* 모바일에서 여백 조금 줄임 */
     animation: slideUp 1s ease-out forwards; /* 텍스트 슬라이드 애니메이션 */
   }
 
   .mainImageText1 {
+    font-family: 'Pretendard-Regular';
     font-size: 4vw; /* 모바일에서 더 작은 글자 크기 */
-    margin-top: 2vw;
-    font-weight: bold;
-    line-height: 0.5; /* 텍스트 간격 조정 */
+    margin-top: 1vw;
+    font-weight: 600;
     color: #ffffff; /* 파랑 색상 */
     animation: fadeInUp 1.5s ease-out forwards 0.5s; /* 점차적으로 나타나며 올라오는 효과 */
   }
@@ -172,8 +174,8 @@
   }
 
   .greyText1 {
-    font-size: 3vw; /* 텍스트2 가장 큰 크기 */
-
+    font-size: 4vw; /* 텍스트2 가장 큰 크기 */
+    font-weight: 600;
     color: #fbf70a; /* 회색 텍스트 */
   }
 
@@ -551,12 +553,12 @@
   .imageContainer {
     position: relative; /* 상대적 위치 지정 */
     width: 100%;
-    height: 70vh;
+    height: 85vh;
     overflow: hidden; /* 이미지를 잘라내지 않도록 */
 
     .mainImage {
       width: 100%;
-      height: 70vh;
+      height: 85vh;
       object-fit: cover; /* 이미지 비율 유지하면서 가득 채우기 */
       filter: brightness(0.8) contrast(1.2); /* 이미지에 어두운 필터 적용, 대비 강조 */
     }
