--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -868,7 +868,7 @@
 
   .text1 {
     padding: 8vw 0 0 6vw;
-    font-family: "HakgyoansimBareonbatangB";
+    font-family: 'Pretendard-Regular';
     font-size: 5vw;
     color: #c98f25;
   }
@@ -877,7 +877,7 @@
     width: 100%;
     text-align: center;
     text-decoration: none;
-    font-family: "HakgyoansimBareonbatangB";
+    font-family: 'Pretendard-Regular';
     font-size: 1.5vw;
     color: #d1af73;
 
@@ -918,7 +918,7 @@
     transform: translate(-50%, -50%);
     color: #ffffff;
     font-size: 3vw;
-    font-family: "HakgyoansimBareonbatangB";
+    font-family: 'Pretendard-Regular';
   }
 
   .text2 {
@@ -959,13 +959,13 @@
 
     .title {
       color: #890d18;
-      font-family: "HakgyoansimBareonbatangB";
+      font-family: 'Pretendard-Regular';
       font-size: 4vw;
       font-weight: 400;
       line-height: 6vw;
 
       span:first-of-type {
-        font-family: "HakgyoansimBareonbatangB";
+        font-family: 'Pretendard-Regular';
         color: #b88c52;
         font-weight: 800;
         font-size: 5vw;
